# ACM-library-open

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
src/: CMakeLists.txt
src/char_algorithm/: CMakeLists.txt  kmp.ixx  kmp.md  manacher.ixx  manacher.md
src/common/: CMakeLists.txt  acm_except.ixx
src/common/type/: CMakeLists.txt  acm_concept.ixx
test/: CMakeLists.txt
test/char_algorithm/: kmp_test.cpp  manacher_test.cpp
